Improve flow hover cards with Jira display data
